# CatholicCorpus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
catholiccorpusgenerator/: CMakeLists.txt
catholiccorpusgenerator/src/: main.cpp
catholiccorpusgenerator/src/fileparsers/: generic_parser.cpp  livredesdemeures_parser.cpp  livredesdemeures_parser.hpp  saintethereseavila_parser.cpp  saintethereseavila_parser.hpp  theology_parser.cpp  theology_parser.hpp  virtualfileparser.cpp  virtualfileparser.hpp
catholiccorpusgenerator/src/requester/: externalrequester.hpp  internetrequester.cpp
catholiccorpusgenerator/src/util/: util.cpp  util.hpp
input/Carmel/: source.txt
input/Carmel/SainteThereseAvila/: le_chemin_de_perfection.txt  le_livre_de_la_vie-2.txt  les_relations-2.txt  livre_des_demeures.txt
input/Theologie Catho/: source.txt
input/Theologie Catho/1) Methaphysique/: M1.txt  M2.txt
input/Theologie Catho/1) Methaphysique/Complement/: C-M1.txt
input/Theologie Catho/2) Hermeneutique theologique/: T1.txt  T2.txt  T3.txt  T4.txt
input/Theologie Catho/2) Hermeneutique theologique/Complement/: C-T1.txt  C-T3.txt  C-T4.txt
input/Theologie_Catho/1_Methaphysique/: M3.txt
input/Theologie_Catho/3_Doctrine de Dieu/: T5.txt  T6.txt  T7.txt
input/Theologie_Catho/4_Ecclesiologie/: T8.txt  T9.txt
input/Theologie_Catho/5_Theologie_sacramentelle/: T10.txt  T11.txt  T12.txt  T13.txt
input/Theologie_Catho/6_Anthropologie_theologique/: T14.txt  T15.txt  T16.txt
input/Therese_de_Lisieux/: THERESE_DE_LISIEUX_Histoire_dune_ame.docx  THERESE_DE_LISIEUX_Histoire_dune_ame.odt  THERESE_DE_LISIEUX_Histoire_dune_ame.txt  source.txt
input/Vatican/: papa-francesco_20150524_enciclica-laudato-si_fr.txt  source.txt
input/Vatican/fromReadWebPageExecutable/: README.txt  audiences_2023.html
output/Carmel/SainteThereseAvila/: le_chemin_de_perfection.txt  le_livre_de_la_vie-2.txt  les_relations-2.txt  livre_des_demeures.txt
output/Theologie_Catho/1_Methaphysique/: M1.txt  M2.txt  M3.txt
output/Theologie_Catho/2_Hermeneutique_theologique/: T1.txt  T2.txt  T3.txt  T4.txt
output/Theologie_Catho/3_Doctrine_de_Dieu/: T5.txt  T6.txt  T7.txt
output/Theologie_Catho/4_Ecclesiologie/: T8.txt  T9.txt
output/Theologie_Catho/5_Theologie_sacramentelle/: T10.txt  T11.txt  T12.txt  T13.txt
output/Theologie_Catho/6_Anthropologie_theologique/: T14.txt  T15.txt  T16.txt
output/Therese_de_Lisieux/: THERESE_DE_LISIEUX_Histoire_dune_ame.txt
readwebpage/: CMakeLists.txt
readwebpage/src/: main.cpp
readwebpage/src/fileparsers/: generic_parser.hpp  saintethereseavila_parser.hpp  virtualfileparser.hpp
readwebpage/src/requester/: internetrequester.cpp  internetrequester.hpp
readwebpage/src/util/: util.cpp
(+8 files in other folders)
